--- a/client/src/app/components/revisions/revision-popover/revision-popover.component.html
+++ b/client/src/app/components/revisions/revision-popover/revision-popover.component.html
@@ -4,8 +4,7 @@
       [nzTitle]="cardTitle"
       [nzExtra]="subject"
       nzBordered="false"
-      id="card-content"
-    >
+      id="card-content">
       <ng-template #cardTitle>
         <nz-space class="revision-card-title">
           <span *nzSpaceItem>
@@ -13,11 +12,12 @@
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Revision' | entityColor"
-              nzType="civic-revision"
-            ></i>
+              nzType="civic-revision"></i>
             RID{{ r.id }}
           </span>
-          <cvc-status-tag [status]="r.status" *nzSpaceItem></cvc-status-tag>
+          <cvc-status-tag
+            [status]="r.status"
+            *nzSpaceItem></cvc-status-tag>
         </nz-space>
       </ng-template>
 
@@ -26,38 +26,36 @@
           <cvc-gene-tag
             *ngSwitchCase="'Gene'"
             [enablePopover]="false"
-            [gene]="r.subject"
-          ></cvc-gene-tag>
+            [gene]="r.subject"></cvc-gene-tag>
           <cvc-assertion-tag
             *ngSwitchCase="'Assertion'"
             [enablePopover]="false"
-            [assertion]="r.subject"
-          ></cvc-assertion-tag>
+            [assertion]="r.subject"></cvc-assertion-tag>
           <cvc-evidence-tag
             *ngSwitchCase="'EvidenceItem'"
             [enablePopover]="false"
-            [evidence]="r.subject"
-          ></cvc-evidence-tag>
+            [evidence]="r.subject"></cvc-evidence-tag>
           <cvc-variant-tag
             *ngSwitchCase="'Variant'"
             [enablePopover]="false"
-            [variant]="r.subject"
-          ></cvc-variant-tag>
+            [variant]="r.subject"></cvc-variant-tag>
           <cvc-variant-group-tag
             *ngSwitchCase="'VariantGroup'"
             [enablePopover]="false"
-            [variantgroup]="r.subject"
-          ></cvc-variant-group-tag>
+            [variantgroup]="r.subject"></cvc-variant-group-tag>
           <span *ngSwitchDefault>{{ r.subject.name }}</span>
         </ng-container>
       </ng-template>
 
-      <nz-descriptions nzBordered [nzColumn]="1" nzSize="small">
+      <nz-descriptions
+        nzBordered
+        [nzColumn]="1"
+        nzSize="small">
         <nz-descriptions-item nzTitle="Revisor">
           <cvc-user-tag
+            *ngIf="r.revisor"
             [enablePopover]="false"
-            [user]="r.revisor"
-          ></cvc-user-tag>
+            [user]="r.revisor"></cvc-user-tag>
         </nz-descriptions-item>
         <nz-descriptions-item nzTitle="Field">
           {{ r.linkoutData.name }}
