--- a/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
+++ b/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
@@ -3,102 +3,113 @@
   nzTitle="Knowledgebase Statistics"
   class="home-card"
   [nzExtra]="statsRadioGroup"
-  nzSize="small"
->
+  nzSize="small">
   <ng-template #statsRadioGroup>
-    <nz-radio-group [(ngModel)]="statsType" nzSize="small">
-      <label nz-radio-button nzValue="Total">Total</label>
-      <label nz-radio-button nzValue="Weekly">Weekly</label>
-      <label nz-radio-button nzValue="Monthly">Monthly</label>
-      <label nz-radio-button nzValue="Yearly">Yearly</label>
+    <nz-radio-group
+      [(ngModel)]="statsType"
+      nzSize="small">
+      <label
+        nz-radio-button
+        nzValue="Total"
+        >Total</label
+      >
+      <label
+        nz-radio-button
+        nzValue="Weekly"
+        >Weekly</label
+      >
+      <label
+        nz-radio-button
+        nzValue="Monthly"
+        >Monthly</label
+      >
+      <label
+        nz-radio-button
+        nzValue="Yearly"
+        >Yearly</label
+      >
     </nz-radio-group>
   </ng-template>
   <ng-container *ngIf="stats$ | ngrxPush as stats; else isLoading">
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <a routerLink="/assertions">
-          <nz-statistic
-            [nzTitle]="statsType + ' Assertions'"
-            [nzValue]="(stats.assertions[statsTypes[statsType]] | number)!"
-            [nzPrefix]="assertionIcon"
-          ></nz-statistic>
+          <!-- NOTE: #UPDATE value passed to nzValue in nz-statistic elements
+               raises the following error: Element implicitly has an 'any' type
+               because expression of type 'string' can't be used to index type 'TimePointCounts'. -->
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Assertions'"
+                    [nzValue]="(stats.assertions[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="assertionIcon"
+                  ></nz-statistic> -->
           <ng-template #assertionIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Assertion' | entityColor"
-              nzType="civic-assertion"
-            ></i>
+              nzType="civic-assertion"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/evidence">
-          <nz-statistic
-            [nzTitle]="statsType + ' Evidence'"
-            [nzValue]="(stats.evidenceItems[statsTypes[statsType]] | number)!"
-            [nzPrefix]="evidenceIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Evidence'"
+                    [nzValue]="(stats.evidenceItems[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="evidenceIcon"></nz-statistic> -->
           <ng-template #evidenceIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'EvidenceItem' | entityColor"
-              nzType="civic-evidence"
-            ></i>
+              nzType="civic-evidence"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/genes">
-          <nz-statistic
-            [nzTitle]="statsType + ' Genes'"
-            [nzValue]="(stats.genes[statsTypes[statsType]] | number)!"
-            [nzPrefix]="geneIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Genes'"
+                    [nzValue]="(stats.genes[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="geneIcon"></nz-statistic> -->
           <ng-template #geneIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Gene' | entityColor"
-              nzType="civic-gene"
-            ></i>
+              nzType="civic-gene"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/variants">
-          <nz-statistic
-            [nzTitle]="statsType + ' Variants'"
-            [nzValue]="(stats.variants[statsTypes[statsType]] | number)!"
-            [nzPrefix]="variantIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Variants'"
+                    [nzValue]="(stats.variants[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="variantIcon"></nz-statistic> -->
           <ng-template #variantIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Variant' | entityColor"
-              nzType="civic-variant"
-            ></i>
+              nzType="civic-variant"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/molecular-profiles">
-          <nz-statistic
-            [nzTitle]="statsType + ' Molecular Profiles'"
-            [nzValue]="
-              (stats.molecularProfiles[statsTypes[statsType]] | number)!
-            "
-            [nzPrefix]="mpIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Molecular Profiles'"
+                    [nzValue]="
+                      (stats.molecularProfiles[statsTypes[statsType]] | number)!
+                    "
+                    [nzPrefix]="mpIcon"></nz-statistic> -->
           <ng-template #mpIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'MolecularProfile' | entityColor"
-              nzType="civic-molecularprofile"
-            ></i>
+              nzType="civic-molecularprofile"></i>
           </ng-template>
         </a>
       </nz-col>
@@ -106,84 +117,74 @@
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <a routerLink="/diseases">
-          <nz-statistic
-            [nzTitle]="statsType + ' Diseases'"
-            [nzValue]="(stats.diseases[statsTypes[statsType]] | number)!"
-            [nzPrefix]="diseaseIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Diseases'"
+                    [nzValue]="(stats.diseases[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="diseaseIcon"></nz-statistic> -->
           <ng-template #diseaseIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Disease' | entityColor"
-              nzType="civic-disease"
-            ></i>
+              nzType="civic-disease"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/therapies">
-          <nz-statistic
-            [nzTitle]="statsType + ' Therapies'"
-            [nzValue]="(stats.therapies[statsTypes[statsType]] | number)!"
-            [nzPrefix]="therapyIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Therapies'"
+                    [nzValue]="(stats.therapies[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="therapyIcon"></nz-statistic> -->
           <ng-template #therapyIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Intervention' | entityColor"
-              nzType="civic-intervention"
-            ></i>
+              nzType="civic-intervention"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/sources">
-          <nz-statistic
-            [nzTitle]="statsType + ' Sources'"
-            [nzValue]="(stats.sources[statsTypes[statsType]] | number)!"
-            [nzPrefix]="sourceIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Sources'"
+                    [nzValue]="(stats.sources[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="sourceIcon"></nz-statistic> -->
           <ng-template #sourceIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Source' | entityColor"
-              nzType="civic-source"
-            ></i>
+              nzType="civic-source"></i>
           </ng-template>
         </a>
       </nz-col>
       <nz-col nzFlex="1">
-        <nz-statistic
-          [nzTitle]="statsType + ' Revisions'"
-          [nzValue]="(stats.revisions[statsTypes[statsType]] | number)!"
-          [nzPrefix]="revisionsIcon"
-        ></nz-statistic>
+        <!-- <nz-statistic
+                  [nzTitle]="statsType + ' Revisions'"
+                  [nzValue]="(stats.revisions[statsTypes[statsType]] | number)!"
+                  [nzPrefix]="revisionsIcon"></nz-statistic> -->
         <ng-template #revisionsIcon>
           <i
             nz-icon
             nzTheme="twotone"
             [nzTwotoneColor]="'Revision' | entityColor"
-            nzType="civic-revision"
-          ></i>
+            nzType="civic-revision"></i>
         </ng-template>
       </nz-col>
       <nz-col nzFlex="1">
         <a routerLink="/users">
-          <nz-statistic
-            [nzTitle]="statsType + ' Contributors'"
-            [nzValue]="(stats.users[statsTypes[statsType]] | number)!"
-            [nzPrefix]="userIcon"
-          ></nz-statistic>
+          <!-- <nz-statistic
+                    [nzTitle]="statsType + ' Contributors'"
+                    [nzValue]="(stats.users[statsTypes[statsType]] | number)!"
+                    [nzPrefix]="userIcon"></nz-statistic> -->
           <ng-template #userIcon>
             <i
               nz-icon
               nzTheme="twotone"
               [nzTwotoneColor]="'Curator' | entityColor"
-              nzType="civic-user"
-            ></i>
+              nzType="civic-user"></i>
           </ng-template>
         </a>
       </nz-col>
@@ -194,64 +195,54 @@
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Assertions'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Evidence'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Genes'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Variants'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Molecular Profiles'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
     </nz-row>
     <nz-row nzGutter="8">
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Diseases'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Therapies'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Sources'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Revisions'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
       <nz-col nzFlex="1">
         <nz-statistic
           [nzTitle]="statsType + ' Contributors'"
-          [nzValue]="'--'"
-        ></nz-statistic>
+          [nzValue]="'--'"></nz-statistic>
       </nz-col>
     </nz-row>
   </ng-template>
