--- a/client/src/app/components/comments/comment-list/comment-list.component.html
+++ b/client/src/app/components/comments/comment-list/comment-list.component.html
@@ -1,31 +1,36 @@
 <ng-container
-  *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noComments"
->
+  *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noComments">
   <nz-row [nzGutter]="16">
     <nz-col nzSpan="18">
-      <nz-space nzDirection="vertical" style="width: 100%">
-        <nz-card nzTitle="Comments" *nzSpaceItem>
+      <nz-space
+        nzDirection="vertical"
+        style="width: 100%">
+        <nz-card
+          nzTitle="Comments"
+          *nzSpaceItem>
           <nz-list
             [nzDataSource]="comments$ | ngrxPush"
             [nzLoading]="loading$ | ngrxPush"
             [nzRenderItem]="comment"
             nzSize="small"
-            nzItemLayout="horizontal"
-          >
+            nzItemLayout="horizontal">
             <nz-list-header *ngIf="pageInfo$ | ngrxPush as pageInfo">
-              <div nz-list-load-more *ngIf="pageInfo.hasPreviousPage">
+              <div
+                nz-list-load-more
+                *ngIf="pageInfo.hasPreviousPage">
                 <button
                   nz-button
                   nzType="link"
                   nzSize="small"
                   nzBlock
-                  (click)="onLoadMore(pageInfo.startCursor)"
-                >
+                  (click)="onLoadMore(pageInfo.startCursor)">
                   Load older comments
                 </button>
               </div>
             </nz-list-header>
-            <ng-template #comment let-comment>
+            <ng-template
+              #comment
+              let-comment>
               <nz-list-item>
                 <cvc-comment-display [comment]="comment"></cvc-comment-display>
               </nz-list-item>
@@ -36,73 +41,71 @@
           id="addComment"
           [subject]="commentable"
           (commentAddedEvent)="refreshList()"
-          *nzSpaceItem
-        ></cvc-comment-add-form>
+          *nzSpaceItem></cvc-comment-add-form>
       </nz-space>
     </nz-col>
     <nz-col nzSpan="6">
       <cvc-participant-list
         listTitle="Commenters"
-        [participantList]="commenters$ | ngrxPush"
-        (participantSelectedEvent)="onCommenterSelected($event)"
-      >
-        <ng-template #itemTemplate let-user>
+        [participantList]="(commenters$ | ngrxPush) || []"
+        (participantSelectedEvent)="onCommenterSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-user>
           <nz-avatar
             *ngIf="user.profileImagePath; else noAvatar"
             nz-comment-avatar
-            [nzSrc]="user.profileImagePath"
-          >
+            [nzSrc]="user.profileImagePath">
           </nz-avatar>
           <ng-template #noAvatar>
             <nz-avatar
               nz-comment-avatar
-              [nzText]="user.displayName.charAt(0) | uppercase"
-            ></nz-avatar>
+              [nzText]="user.displayName.charAt(0) | uppercase"></nz-avatar>
           </ng-template>
           <span>{{ user.displayName }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Mentioned Users"
-        [participantList]="mentionedUsers$ | ngrxPush"
-        (participantSelectedEvent)="onMentionedUserSelected($event)"
-      >
-        <ng-template #itemTemplate let-user>
+        [participantList]="(mentionedUsers$ | ngrxPush) || []"
+        (participantSelectedEvent)="onMentionedUserSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-user>
           <nz-avatar
             *ngIf="user.profileImagePath; else noAvatar"
             nz-comment-avatar
-            [nzSrc]="user.profileImagePath"
-          >
+            [nzSrc]="user.profileImagePath">
           </nz-avatar>
           <ng-template #noAvatar>
             <nz-avatar
               nz-comment-avatar
-              [nzText]="user.displayName.charAt(0) | uppercase"
-            ></nz-avatar>
+              [nzText]="user.displayName.charAt(0) | uppercase"></nz-avatar>
           </ng-template>
           <span>{{ user.displayName }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Mentioned Roles"
-        [participantList]="mentionedRoles$ | ngrxPush"
-        (participantSelectedEvent)="onMentionedRoleSelected($event)"
-      >
-        <ng-template #itemTemplate let-role>
+        [participantList]="(mentionedRoles$ | ngrxPush) || []"
+        (participantSelectedEvent)="onMentionedRoleSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-role>
           <nz-avatar nzIcon="civic-{{ role.tag.displayName }}"> </nz-avatar>
           <span>{{ role.tag.displayName }}s</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Mentioned Entities"
-        [participantList]="mentionedEntities$ | ngrxPush"
-        (participantSelectedEvent)="onMentionedEntitySelected($event)"
-      >
-        <ng-template #itemTemplate let-entity>
+        [participantList]="(mentionedEntities$ | ngrxPush) || []"
+        (participantSelectedEvent)="onMentionedEntitySelected($event)">
+        <ng-template
+          #itemTemplate
+          let-entity>
           <i
             nz-icon
-            [nzType]="entity.tag.tagType | iconNameForSubscribableEntity"
-          ></i>
+            [nzType]="entity.tag.tagType | iconNameForSubscribableEntity"></i>
           <span>{{ entity.tag.displayName }}</span>
         </ng-template>
       </cvc-participant-list>
@@ -113,6 +116,5 @@
   <cvc-comment-add-form
     id="addComment"
     [subject]="commentable"
-    (commentAddedEvent)="refreshList()"
-  ></cvc-comment-add-form>
+    (commentAddedEvent)="refreshList()"></cvc-comment-add-form>
 </ng-template>
