--- a/client/src/app/components/events/event-timeline/event-timeline.component.html
+++ b/client/src/app/components/events/event-timeline/event-timeline.component.html
@@ -1,19 +1,19 @@
 <nz-timeline *ngIf="events?.length">
   <ng-container *ngFor="let event of events">
-    <nz-timeline-item [nzDot]="timelineDotTemplate">
+    <nz-timeline-item
+      *ngIf="event"
+      [nzDot]="timelineDotTemplate">
       <ng-template #timelineDotTemplate>
         <i
           nz-icon
           [nzType]="event.action | iconNameForEventAction"
           nzTheme="twotone"
-          class="item-icon"
-        ></i>
+          class="item-icon"></i>
       </ng-template>
 
       <cvc-event-timeline-item
-        [event]="event"
-        [tagDisplay]="tagDisplay"
-      ></cvc-event-timeline-item>
+        [event]="event!"
+        [tagDisplay]="tagDisplay"></cvc-event-timeline-item>
     </nz-timeline-item>
   </ng-container>
 </nz-timeline>
