--- a/client/src/app/components/events/homepage-event-feed/homepage-event-feed.component.html
+++ b/client/src/app/components/events/homepage-event-feed/homepage-event-feed.component.html
@@ -1,16 +1,21 @@
 <ng-container *ngIf="this.unfilteredCount$ | ngrxPush as count; else noEvents">
   <nz-row [nzGutter]="16">
     <nz-col nzSpan="24">
-      <nz-space nzDirection="vertical" style="width: 100%">
-        <nz-card [nzTitle]="undefined" *nzSpaceItem>
+      <nz-space
+        nzDirection="vertical"
+        style="width: 100%">
+        <nz-card
+          [nzTitle]="undefined"
+          *nzSpaceItem>
           <ng-container *ngIf="events$ | ngrxPush as events">
             <nz-row [nzGutter]="16">
-              <nz-col nzSpan="24" class="timeline">
+              <nz-col
+                nzSpan="24"
+                class="timeline">
                 <ng-container *ngIf="events.length; else noEvents">
                   <cvc-event-timeline
                     [events]="events"
-                    [tagDisplay]="tagDisplay"
-                  ></cvc-event-timeline>
+                    [tagDisplay]="tagDisplay"></cvc-event-timeline>
                 </ng-container>
                 <ng-container *ngIf="pageInfo$ | ngrxPush as pageInfo">
                   <button
@@ -18,8 +23,7 @@
                     nzType="default"
                     nzSize="small"
                     nzBlock
-                    routerLink="/curation/activity"
-                  >
+                    routerLink="/curation/activity">
                     See Full Activity Feed
                   </button>
                 </ng-container>
@@ -32,5 +36,7 @@
   </nz-row>
 </ng-container>
 <ng-template #noEvents>
-  <nz-empty nzNotFoundImage="simple" nzNotFoundContent="No Events"></nz-empty>
+  <nz-empty
+    nzNotFoundImage="simple"
+    nzNotFoundContent="No Events"></nz-empty>
 </ng-template>
