--- a/client/src/app/components/flags/flag-list-and-filter/flag-list-and-filter.component.html
+++ b/client/src/app/components/flags/flag-list-and-filter/flag-list-and-filter.component.html
@@ -1,23 +1,21 @@
 <ng-container
-  *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noFlags"
->
+  *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noFlags">
   <nz-row [nzGutter]="16">
     <nz-col nzSpan="18">
       <nz-space nzDirection="vertical">
         <cvc-flag-list
-          [flags]="flags$ | ngrxPush"
+          [flags]="(flags$ | ngrxPush) || []"
           [flagResolvedCallback]="refresh"
-          *nzSpaceItem
-        ></cvc-flag-list>
+          *nzSpaceItem></cvc-flag-list>
         <ng-container *ngrxLet="pageInfo$ as pageInfo">
-          <ng-container *ngIf="pageInfo?.hasNextPage && pageInfo.endCursor">
+          <ng-container
+            *ngIf="pageInfo && pageInfo?.hasNextPage && pageInfo.endCursor">
             <button
               nz-button
               nzBlock
               nzType="default"
               (click)="loadMore(pageInfo?.endCursor)"
-              *nzSpaceItem
-            >
+              *nzSpaceItem>
               Load More
             </button>
           </ng-container>
@@ -25,8 +23,7 @@
         <cvc-flag-add-form
           [flaggable]="flaggable"
           [flagAddedCallback]="refresh"
-          *nzSpaceItem
-        ></cvc-flag-add-form>
+          *nzSpaceItem></cvc-flag-add-form>
       </nz-space>
     </nz-col>
     <nz-col nzSpan="6">
@@ -34,50 +31,49 @@
         listTitle="Flag State"
         [preselectedOption]="this.selectableStates[0]"
         [participantList]="selectableStates"
-        (participantSelectedEvent)="onStateSelected($event)"
-      >
-        <ng-template #itemTemplate let-state>
+        (participantSelectedEvent)="onStateSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-state>
           <span>{{ state.displayName }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Flagging Users"
-        [participantList]="uniqueFlaggingUsers$ | ngrxPush"
-        (participantSelectedEvent)="onFlaggingUsersSelected($event)"
-      >
-        <ng-template #itemTemplate let-user>
+        [participantList]="(uniqueFlaggingUsers$ | ngrxPush) || []"
+        (participantSelectedEvent)="onFlaggingUsersSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-user>
           <nz-avatar
             *ngIf="user.profileImagePath; else noAvatar"
             nz-comment-avatar
-            [nzSrc]="user.profileImagePath"
-          >
+            [nzSrc]="user.profileImagePath">
           </nz-avatar>
           <ng-template #noAvatar>
             <nz-avatar
               nz-comment-avatar
-              [nzText]="user.username.charAt(0) | uppercase"
-            ></nz-avatar>
+              [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
           </ng-template>
           <span>{{ user.username }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Resolving Users"
-        [participantList]="uniqueResolvingUsers$ | ngrxPush"
-        (participantSelectedEvent)="onResolvingUsersSelected($event)"
-      >
-        <ng-template #itemTemplate let-user>
+        [participantList]="(uniqueResolvingUsers$ | ngrxPush) || []"
+        (participantSelectedEvent)="onResolvingUsersSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-user>
           <nz-avatar
             *ngIf="user.profileImagePath; else noAvatar"
             nz-comment-avatar
-            [nzSrc]="user.profileImagePath"
-          >
+            [nzSrc]="user.profileImagePath">
           </nz-avatar>
           <ng-template #noAvatar>
             <nz-avatar
               nz-comment-avatar
-              [nzText]="user.username.charAt(0) | uppercase"
-            ></nz-avatar>
+              [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
           </ng-template>
           <span>{{ user.username }}</span>
         </ng-template>
@@ -88,6 +84,5 @@
 <ng-template #noFlags>
   <cvc-flag-add-form
     [flaggable]="flaggable"
-    [flagAddedCallback]="refresh"
-  ></cvc-flag-add-form>
+    [flagAddedCallback]="refresh"></cvc-flag-add-form>
 </ng-template>
