--- a/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
+++ b/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
@@ -1,6 +1,5 @@
 <ng-container
-  *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noRevisions"
->
+  *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noRevisions">
   <nz-row [nzGutter]="16">
     <nz-col nzSpan="18">
       <nz-space nzDirection="vertical">
@@ -9,17 +8,16 @@
           (revisionSetSelectedEvent)="onRevisionSetSelected($event)"
           (revisionMutationCompleted)="refresh()"
           [refetchQueries]="this.refetchQueries"
-          *nzSpaceItem
-        ></cvc-revision-list>
+          *nzSpaceItem></cvc-revision-list>
         <ng-container *ngrxLet="pageInfo$ as pageInfo">
-          <ng-container *ngIf="pageInfo?.hasNextPage && pageInfo.endCursor">
+          <ng-container
+            *ngIf="pageInfo && pageInfo?.hasNextPage && pageInfo.endCursor">
             <button
               nz-button
               nzBlock
               nzType="default"
               (click)="loadMore(pageInfo?.endCursor)"
-              *nzSpaceItem
-            >
+              *nzSpaceItem>
               Load More
             </button>
           </ng-container>
@@ -28,9 +26,13 @@
     </nz-col>
     <nz-col nzSpan="6">
       <!-- TODO: Evaluate the need for this nz-space -->
-      <nz-space nzDirection="vertical" *ngIf="this.filteredSet">
+      <nz-space
+        nzDirection="vertical"
+        *ngIf="this.filteredSet">
         <nz-row *nzSpaceItem>
-          <nz-tag nzMode="closeable" (nzOnClose)="onSetFilterClearClicked()"
+          <nz-tag
+            nzMode="closeable"
+            (nzOnClose)="onSetFilterClearClicked()"
             >Group: {{ this.filteredSet }}</nz-tag
           >
         </nz-row>
@@ -39,59 +41,59 @@
         listTitle="Filter by Revision Status"
         [preselectedOption]="this.preselectedRevisionStatus"
         [participantList]="selectableStatuses"
-        (participantSelectedEvent)="onStatusSelected($event)"
-      >
-        <ng-template #itemTemplate let-status>
+        (participantSelectedEvent)="onStatusSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-status>
           <span>{{ status.displayName }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Filter by Revisor"
-        [participantList]="uniqueRevisors$ | ngrxPush"
-        (participantSelectedEvent)="onRevisorSelected($event)"
-      >
-        <ng-template #itemTemplate let-user>
+        [participantList]="(uniqueRevisors$ | ngrxPush) || []"
+        (participantSelectedEvent)="onRevisorSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-user>
           <nz-avatar
             *ngIf="user.profileImagePath; else noAvatar"
             nz-comment-avatar
-            [nzSrc]="user.profileImagePath"
-          >
+            [nzSrc]="user.profileImagePath">
           </nz-avatar>
           <ng-template #noAvatar>
             <nz-avatar
               nz-comment-avatar
-              [nzText]="user.username.charAt(0) | uppercase"
-            ></nz-avatar>
+              [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
           </ng-template>
           <span>{{ user.username }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Filter by Field"
-        [participantList]="revisionFields$ | ngrxPush"
-        (participantSelectedEvent)="onFieldNameSelected($event)"
-      >
-        <ng-template #itemTemplate let-field>
+        [participantList]="(revisionFields$ | ngrxPush) || []"
+        (participantSelectedEvent)="onFieldNameSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-field>
           <span>{{ field.displayName }}</span>
         </ng-template>
       </cvc-participant-list>
       <cvc-participant-list
         listTitle="Filter by Resolver"
-        [participantList]="uniqueResolvers$ | ngrxPush"
-        (participantSelectedEvent)="onResolverSelected($event)"
-      >
-        <ng-template #itemTemplate let-user>
+        [participantList]="(uniqueResolvers$ | ngrxPush) || []"
+        (participantSelectedEvent)="onResolverSelected($event)">
+        <ng-template
+          #itemTemplate
+          let-user>
           <nz-avatar
             *ngIf="user.profileImagePath; else noAvatar"
             nz-comment-avatar
-            [nzSrc]="user.profileImagePath"
-          >
+            [nzSrc]="user.profileImagePath">
           </nz-avatar>
           <ng-template #noAvatar>
             <nz-avatar
               nz-comment-avatar
-              [nzText]="user.username.charAt(0) | uppercase"
-            ></nz-avatar>
+              [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
           </ng-template>
           <span>{{ user.username }}</span>
         </ng-template>
@@ -102,13 +104,15 @@
 <ng-template #noRevisions>
   <ng-container *ngIf="isLoading$ | ngrxPush as isLoading; else noneFound">
     <nz-row nzJustify="center">
-      <i nz-icon nzType="loading" style="font-size: 32px"></i>
+      <i
+        nz-icon
+        nzType="loading"
+        style="font-size: 32px"></i>
     </nz-row>
   </ng-container>
   <ng-template #noneFound>
     <nz-empty
       nzNotFoundImage="simple"
-      nzNotFoundContent="Entity has no Revisions"
-    ></nz-empty>
+      nzNotFoundContent="Entity has no Revisions"></nz-empty>
   </ng-template>
 </ng-template>
